--- a/app/assets/stylesheets/components/_profile_box.scss
+++ b/app/assets/stylesheets/components/_profile_box.scss
@@ -47,7 +47,7 @@
 
 .edit-user {
   display: flex;
-  margin-left: 20px;
+  margin: 20px 0 20px 20px;
   flex-direction: column;
 }
 
@@ -71,7 +71,7 @@
 
 .change-password {
   display: flex;
-  margin-left: 20px;
+  margin: 30px 0 20px 20px;
 }
 
 
@@ -91,10 +91,14 @@
 .form-actions {
   display: flex;
   margin-left: 20px;
+    .btn-primary {
+      padding: 10px;
+      width: 90px;
+    }
 }
 
 .bottom-row {
-  margin-left: 20px;
+  margin: 0 0 20px 20px ;
 }
 
 .bottom-btn {
@@ -103,9 +107,15 @@
 }
 
 .back {
-
+  .btn-secondary {
+    width: 90px;
+    padding: 10px;
+  }
 }
 
 .cancel {
-
+  .btn-secondary {
+    width: 155px;
+    padding: 10px;
+  }
 }
