--- a/app/assets/stylesheets/components/_profile_box.scss
+++ b/app/assets/stylesheets/components/_profile_box.scss
@@ -98,7 +98,7 @@
 }
 
 .bottom-row {
-  margin: 0 0 20px 20px ;
+  margin: 30px 0 30px 20px;
 }
 
 .bottom-btn {
@@ -110,6 +110,7 @@
   .btn-secondary {
     width: 90px;
     padding: 10px;
+    margin-right: 525px;
   }
 }
 
@@ -118,4 +119,12 @@
     width: 155px;
     padding: 10px;
   }
+}
+
+ .line{
+width: 800px;
+height: 47px;
+border-bottom: 1px solid gray;
+position: absolute;
+margin-left: 20px;
 }
