--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -89,11 +89,16 @@
       <%= f.button :submit, "Update", class: "btn btn-primary" %>
     </div>
   <% end %>
+
+    <div class="line"></div>
+
+  <br>
   <br>
 
   <div class="bottom-row">
-    <h3>Cancel my account</h3>
+    <h2>Cancel my account</h2>
     </div>
+
 
     <div class="bottom-btn">
 
