--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -19,11 +19,13 @@
 .card-description h2 {
   font-size: 36px;
   margin: 0;
+  color: rgba(1, 50, 67, 1);
 }
 .card-description p {
   font-family: $headers-font;
   font-size: 24px;
   margin: 0;
+  color: rgba(1, 50, 67, 1);
 }
 .card-link {
   position: absolute;
@@ -36,7 +38,7 @@
   opacity: 0;
 }
 .card-link:hover {
-  opacity: 0.1;
+  // opacity: 0.1;
 }
 
 .card1:hover {
