--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,5 +5,6 @@
 @import "map";
 @import "login_form";
 @import "messages";
-@import "profile_box"
+@import "profile_box";
+@import "profile"
 // @import "banner";
