--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -53,7 +53,7 @@
   .col-5 {
     flex-basis: 20%;
   }
-  .status-options {
+  .submit-status-button {
     font-family: $body-font;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     background-color: #6ECAD6;
