fixed navbar background colour

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -4,11 +4,9 @@
   transition: 0.5s background-color ease
 }
 
-// .navbar-lewagon-white {
-//   background-color: white;
-// }
-
-// ^^^ !For Update Navbar on Scroll. REF: https://kitt.lewagon.com/knowledge/lectures/05-Rails%2F04-Rails-mister-cocktail#sourceimport 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';
+.navbar-lewagon-white {
+   background-color: white;
+ }
 
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
