--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,12 +17,10 @@
       <div class="row">
         <% @therapists.each do |therapist| %>
           <div class="col-sm-4" style="padding: 10px">
-            <div data-aos="flip-left" class="card1">
-              <div class="card1" style="background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0)), url(<%= asset_path "card.png" %>)">
+            <div data-aos="flip-left" class="card1" style="background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0)), url(<%= asset_path "card.png" %>)">
                 <div class="clipped-border" >
                   <img src="https://source.unsplash.com/featured/?{people}<%= (1..1000).to_a.sample %>" id="clipped">
                   <%= link_to "View", user_path(therapist), class: 'card-link' %>
-                </div>
                 </div>
               <div class="card-description">
                 <p><%= therapist.first_name %></p>
