--- a/app/assets/stylesheets/components/_login_form.scss
+++ b/app/assets/stylesheets/components/_login_form.scss
@@ -1,30 +1,46 @@
-.form-login {
-  background: white;
-  padding: 20px;
-  margin-top: 50px;
-  border-radius: 3px;
-  box-shadow: 1px 1px 2px rgba(0,0,0,0.2);
-  width: 370px;
-  h2 {
-    margin-bottom: 20px;
-    text-align: center;
-  }
-  .btn-primary {
-    width: 100%;
-    background-color: #6ECAD6;
-    text-decoration: none;
-    margin-bottom: 20px;
-    border: none;
-    padding: 8px;
-  }
-}
-
 .login-container {
   display: flex;
   justify-content: center;
   width: 100%;
-}
 
-a {
-  text-decoration: none;
+  a {
+    text-decoration: none;
+  }
+
+  .form-login {
+    background: white;
+    padding: 20px;
+    margin-top: 50px;
+    border-radius: 3px;
+    box-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+    width: 370px;
+
+    h2 {
+      margin-bottom: 20px;
+      text-align: center;
+    }
+
+    .form-actions-login {
+      display: flex;
+      justify-content: space-around;
+
+      .primary-button {
+        font-family: $body-font;
+        width: 100%;
+        box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+        background-color: #6ECAD6;
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        cursor: pointer;
+      }
+    }
+    .form-bottom-links {
+        margin-top: 16px;
+    }
+  }
 }
