--- a/app/assets/stylesheets/components/_profile_box.scss
+++ b/app/assets/stylesheets/components/_profile_box.scss
@@ -24,10 +24,6 @@
   justify-content: space-around;
 }
 
-.email {
-  width: 380px;
-}
-
 .current-password {
   width: 380px;
 }
@@ -88,14 +84,14 @@
   width: 380px;
 }
 
-.form-actions {
-  display: flex;
-  margin-left: 20px;
-    .btn-primary {
-      padding: 10px;
-      width: 90px;
-    }
-}
+//.form-actions {
+//  display: flex;
+//  margin-left: 20px;
+//    .btn-primary {
+//      padding: 10px;
+//      width: 90px;
+//   }
+// }
 
 .bottom-row {
   margin: 30px 0 30px 20px;
@@ -121,10 +117,10 @@
   }
 }
 
- .line{
-width: 800px;
-height: 47px;
-border-bottom: 1px solid gray;
-position: absolute;
-margin-left: 20px;
+.line {
+  width: 800px;
+  height: 47px;
+  border-bottom: 1px solid gray;
+  position: absolute;
+  margin-left: 20px;
 }
