signup options added

--- a/app/assets/stylesheets/components/_login_sign_forms.scss
+++ b/app/assets/stylesheets/components/_login_sign_forms.scss
@@ -20,7 +20,7 @@
       text-align: center;
     }
 
-    .form-actions-login {
+    .form-actions-btn {
       display: flex;
       justify-content: space-around;
 
