--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,7 +3,7 @@
 @import "avatar";
 @import "navbar";
 @import "map";
-@import "login_form";
+@import "login_sign_forms";
 @import "messages";
 @import "profile_box";
 @import "profile";
