--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,8 +4,15 @@
       <h2>Sign up</h2>
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= f.error_notification %>
+
         <div class="form-inputs">
-          <%= f.input :therapist, as: :radio_buttons %>
+
+          <%= f.input :therapist,
+                      prompt: "Sign up as...",
+                      required: true,
+                      collection: [["Therapist", true],["Client", false]],
+                      input_html: { multiple: false, class: "multiple-select" }  %>
+
           <%= f.input :email,
                       required: true,
                       autofocus: true,
@@ -18,7 +25,7 @@
                       required: true,
                       input_html: { autocomplete: "new-password" }, placeholder: "******"  %>
         </div>
-        <div class="form-actions">
+        <div class="form-actions-btn">
           <%= f.button :submit, "Register", class: "primary-button" %>
         </div>
       <% end %>
