--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,7 +1,7 @@
 .avatar {
   width: 200px;
   border-radius: 50%;
-  padding-top: 10px;
+  margin-left: 10px;
 }.avatar-small {
   width: 60px;
   height: 60px;
