--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -4,9 +4,9 @@
   transition: 0.5s background-color ease
 }
 
-// .navbar-lewagon-white {
-//   background-color: white;
-// }
+.navbar-lewagon-white {
+  background-color: white;
+}
 
 // ^^^ !For Update Navbar on Scroll. REF: https://kitt.lewagon.com/knowledge/lectures/05-Rails%2F04-Rails-mister-cocktail#sourceimport 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';import 'bootstrap';
 
@@ -16,4 +16,28 @@
 
 .navbar-lewagon .navbar-brand img {
   width: 40px;
+}
+
+.nav-item {
+  text-decoration: none;
+}
+
+.fa-calendar-check {
+  margin-right: 15px;
+  margin-top: 15px;
+  color: #7f7f7f;
+  text-decoration: none;
+}
+
+.fa-comment-alt {
+  margin-right: 5px;
+  margin-top: 8px;
+}
+
+.fa-bell {
+  margin-top: 8px;
+}
+
+.fa-user {
+  text-decoration: none;
 }
