edit profile - in progress

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,7 +5,7 @@
 @import "map";
 @import "login_sign_forms";
 @import "messages";
-@import "profile_box";
+@import "edit_profile";
 @import "profile";
 @import "card";
 @import "flip";
