--- a/app/assets/stylesheets/components/_messages.scss
+++ b/app/assets/stylesheets/components/_messages.scss
@@ -13,10 +13,17 @@
 .message {
   display: flex;
   margin-bottom: 10px;
+  color: #555753;
   &.right {
     flex-direction: row-reverse;
     .message-content {
-      background-color: #F2F9FC;
+      background-color: #d6fa98;
+      text-align: right;
+      padding: 4px 8px 2px 8px;
+      h4 {
+        color: black;
+        font-size: 16px;
+      }
     }
   }
 }
