--- a/app/assets/stylesheets/pages/_userindex.scss
+++ b/app/assets/stylesheets/pages/_userindex.scss
@@ -1,7 +1,41 @@
 .banneri {
   background-size: cover;
-  height: calc(20vh - 66px);
+  height: calc(40vh - 46px);
   background-position: center;
   display: flex;
   align-items: center;
+}
+
+.holding-container {
+  padding: 25px;
+  display: flex;
+}
+.primary-button {
+    font-family: $body-font;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    background-color: #6ECAD6;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+  }
+.container-rs {
+  width: 50%;
+}
+.conatiner-ls {
+  width: 50%;
+}
+
+.container-reviews {
+  overflow: scroll
+}
+
+.mapboxgl-canvas {
+  height: 600px;
+  width: 600px;
 }
