--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,9 +6,7 @@
 )">
 </div>
 
-<div class="avatr-hex">
-
-</div>
+<div class="avatr-hex"></div>
 
 <div class="holding-container">
 
@@ -22,8 +20,7 @@
       <div class="container-reviews">
         <div class="card"></div>
       </div>
-      <div class="price">
-      </div>
+      <div class="price"></div>
       <div class="btn"></div>
     </div>
 
