--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="login-container">
     <div class="form-login">
+      <%= resource.errors.full_messages %>
       <h2>Sign up</h2>
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= f.error_notification %>
@@ -12,7 +13,7 @@
                       required: true,
                       collection: [["Therapist", true],["Client", false]],
                       input_html: { multiple: false, class: "multiple-select" }  %>
-
+          <%= f.input :price, collection: 1..100 %>
           <%= f.input :email,
                       required: true,
                       autofocus: true,
