--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,4 +1,4 @@
 <div class="message <%= user_is_messages_author ? 'right' : '' %>">
-  <%= image_tag message.user.photo.url, class: "avatar" %>
+  <%# image_tag message.user.photo.url, class: "avatar" %>
   <div class="message-content"><%= message.content %></div>
 </div>
