--- a/app/assets/stylesheets/components/_login_sign_forms.scss
+++ b/app/assets/stylesheets/components/_login_sign_forms.scss
@@ -27,7 +27,6 @@
       .primary-button {
         font-family: $body-font;
         width: 100%;
-        box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
         background-color: #6ECAD6;
         border: none;
         color: white;
@@ -37,6 +36,10 @@
         display: inline-block;
         font-size: 16px;
         cursor: pointer;
+        // transition-duration: 0.4s;
+      }
+      .primary-button:hover {
+        background-color: #74d5e0;
       }
     }
     .form-bottom-links {
