--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -27,7 +27,7 @@
   }
   .primary-button {
     font-family: $body-font;
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 6px 12px rgba(0, 0, 0, 0.22);
     background-color: #6ECAD6;
     border: none;
     color: white;
@@ -38,6 +38,7 @@
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
+    border-radius: 4px;
   }
 }
 
