--- a/app/assets/stylesheets/pages/_userindex.scss
+++ b/app/assets/stylesheets/pages/_userindex.scss
@@ -12,7 +12,7 @@
 }
 .primary-button {
     font-family: $body-font;
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    border-radius: 4px;
     background-color: #6ECAD6;
     border: none;
     color: white;
