--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,3 +1,27 @@
 <div class="container">
   <h1 class = "title">Reviews index</h1>
+  <div class="row">
+    <div class="col-sm-12 col-md-6">
+      <h3>Reviews</h3>
+        <table class="table table-bordered">
+          <tbody>
+            <thead>
+              <th>Butler</th>
+            </thead>
+            <% @reviews.each do |review| %>
+              <tr>
+                <td><%= review.client.email%></td>
+                <% if review.description.length <= 15 %>
+                <td><%= review.description %></td>
+                <% else %>
+                <td><%= review.description[0..14] + "..." %></td>
+                <% end %>
+                <td><%= link_to "View review", review_path(review) %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+    </div>
+</div>
+
 </div>
