still trying to add modal pop-ups and filtering with filterific

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -36,6 +36,7 @@
     </div>
   </div>
 </div>
+<%# render 'modal', user: @user %>
   <br>
   <%= link_to "Home", root_path, class: "btn btn-primary" %>
 
