changes in serveral files

--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -2,7 +2,7 @@
     display: flex;
     max-width: calc(100% - 1000px);
 
-  .responsive-table {
+  .list-group-flush {
     margin-top: 5vh;
     flex-grow: 2;
     overflow: scroll;
