adding JS to navbar when scrolling and made changes to css of 'bookings' and 'home' pages

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -10,14 +10,15 @@
     <p><strong>Status: </strong><%= @booking.status %></p>
   <% else %>
     <p><strong>Status: </strong>Pending Confirmation</p>
-<% end  %>
-  <p><%= @booking.description %></p>
-<%= link_to "Edit your booking", edit_booking_path(@booking) %>
-<br>
-<%= link_to "Review your Therapist", new_booking_review_path(@booking) %>
-<br>
-<%= link_to "View bookings", bookings_path(@booking) %>
-<%= link_to "Chat", booking_chat_rooms_path(@booking), :method => :post %>
+  <% end  %>
+    <p><%= @booking.description %></p>
+  <%= link_to "Edit your booking", edit_booking_path(@booking) %>
+  <br>
+  <%= link_to "Review your Therapist", new_booking_review_path(@booking) %>
+  <br>
+  <%= link_to "View bookings", bookings_path(@booking) %>
+  <%= link_to "Chat", booking_chat_rooms_path(@booking), :method => :post %>
 
 
-<%= @booking.client_id %>
+  <%= @booking.client_id %>
+</div>
