--- a/app/assets/stylesheets/components/_bookings_new.scss
+++ b/app/assets/stylesheets/components/_bookings_new.scss
@@ -2,6 +2,7 @@
   border: solid 1px #9c9c9c;
   border-radius: 4px;
   padding: 30px;
+  margin-top: 30px;
 
   .booking-update-btn {
     display: flex;
