--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -10,6 +10,6 @@
 @import "card";
 @import "flip";
 @import "hex";
-@import "bookings_new"
+@import "bookings_new";
 
-// @import "banner";  -- For Navbar scrolling
+@import "banner"
