--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,3 +19,16 @@
     </div>
   </div>
 </div>
+
+<div class="home-banner">
+  <h1>Le Wagon</h1>
+</div>
+
+<!-- <div class="container">
+  <div class="row justify-content-center">
+    <div class="col-6">
+      pe+tab "Lorem ipsum dolor sit amet, consectetur adipisicing elit " * 100
+    </div>
+  </div>
+</div>
+ -->
