still working on modal

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,17 +16,27 @@
     <div class="lhs"></div>
     <div class="container-holder">
       <div class="row">
-        <% @therapists.each do |therapist| %>
+        <% @therapist.each_with_index do |therapist, index| %>
           <div class="col-sm-4" style="padding: 10px">
             <div data-aos="flip-left" class="card1" style="background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0)), url(<%= asset_path "card.png" %>)">
                 <div class="clipped-border" >
                   <img src="https://source.unsplash.com/featured/?{people}<%= (1..1000).to_a.sample %>" id="clipped">
-                  <% link_to "View", user_path(therapist), class: 'card-link' %>
 
+                  <%= link_to "View", user_path(therapist), class: 'card-link' %>
                 </div>
               <div class="card-description">
                 <p><%= therapist.first_name %></p>
                 <h2><%= therapist.last_name %></h2>
+                div class="row">
+                 <a href="#open-modal_<%= therapist.id %>">
+                <button class="btn-buy-now" type="button">buy</button>
+                  <div class="span3">
+                    <%= render :partial => "show", :locals => { :therapist => therapist, :index => index }  %>
+                    <a href=<%="#myModal_#{index}"%> role="button" data-toggle="modal">
+                    </a>
+                  </div>
+                 <% end %>
+                </div>
                  <%= link_to "View", user_path(therapist), class: 'card-link' %>
                   <%# cl_image_tag therapist.photo, height: 40, width: 40, crop: :fill, class: "avatar-small" %>
               </div>
@@ -37,8 +47,6 @@
     </div>
   </div>
 </div>
-
-<div class="modal-content"></div>
   <br>
   <%= link_to "Home", root_path, class: "btn btn-primary" %>
 
@@ -53,3 +61,4 @@
     });
   </script>
   <!-- End AJAX Search Form -->
+
