--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -1,5 +1,5 @@
-<div id="open-modal_<%= @user.id %>" class="modal-window">
-  <div class="banneri"  style="background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.5)), url(<%= asset_path "female.jpg" %>)">
+<div id=<%="myModal_#{index}"%> class="modal-window">
+<div class="banneri"  style="background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.5)), url(<%= asset_path "female.jpg" %>)">
 </div>
 
 <div class="holding-container">
@@ -10,45 +10,34 @@
 
     <div class="conatiner-ls">
       <div class="container-description">
-        <h1><%= @user.first_name %> <%= @user.last_name %></h1>
-        <h2><%= @user.address %></h2>
-        <%= @user.bio %>
-          <p><strong><%= @user.languages%></strong> </p>
+        <h1><%= therapist.first_name %> <%= therapist.last_name %></h1>
+        <h2><%= therapist.address %></h2>
+        <%= therapist.bio %>
      </div>
      <div id="map"
-      style="width: 80%;
-      height: 400px;"
+      style="width: 70%;
+      height: 300px;"
       data-markers="<%= @markers.to_json %>"
       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
       >
       </div>
+      <br>
+          <h2><strong><%= therapist.languages%></strong> </h2>
   </div>
 
 
   <div class="container-rs">
-
     <div class="container-reviews">
       <h2>Reviews</h2>
-      <% @reviews.each do |review| %>
-      <div class="card">
-        <p><%= review.client.first_name %><%= review.client.first_name %></p>
-        <%# review.client_id.photo.url %>
-        <%= review.description %>
-        <%= review.rating.times do %>
-         <i class="fas fa-star stars">
-         </i>
-         <% end %>
-        <% end %>
+
       </div>
     </div>
   </div>
 
-      <div class="primary-button">Price</div>
-      <%= link_to "Book", new_user_booking_path(@user), class: "primary-button"%>
-
-
-
-
+</div>
+<div class="bottom">
+  <div class="primary-button">Price</div>
+  <%= link_to "Book", new_user_booking_path(therapist), class: "primary-button"%>
 </div>
 
 
