chatroom css partially done, added logic to show clock until 5 mins before therapist booking time

--- a/app/assets/stylesheets/pages/_userindex.scss
+++ b/app/assets/stylesheets/pages/_userindex.scss
@@ -41,3 +41,7 @@
   height: 600px;
   width: 600px;
 }
+ .modal-content {
+         width: 600px !important;
+         margin: 30px auto !important;
+     }
